@@ -3,6 +3,7 @@
 #include <cstring>
 #include <stdexcept>
 #include <algorithm>
+#include <limits>
 
 #include <readline/readline.h>
 #include <readline/history.h>
