@@ -1,3 +1,10 @@
+bobcat (5.07.01)
+
+  * Cosmetic changes required by g++-11, among which a redefinition of
+    the Insertable concept in fmt/fmt
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 03 Mar 2021 20:33:17 +0100
+
 bobcat (5.07.00)
 
   * Arg::argPointers() can also be used with Arg const & reference variables.
